# manual-share

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: docs.yaml
src/: lib.rs  scope.rs  shared_box.rs  shared_vec.rs
