[package]
name = "manual-share"
version = "0.2.1"
edition = "2024"
description = "Types to manually share Box and Vec"
license = "MIT"
repository = "https://github.com/newDINO/manual-share"

[dependencies]

[features]
default = ["panic-on-drop", "do-not-panic-when-panicking"]
panic-on-drop = []
do-not-panic-when-panicking = ["panic-on-drop"]
